client/src/index.css
* {
  font-family: 'Cabin', sans-serif;
}

body {
  margin: 0;
  padding: 0;
}

input[type="text"],
textarea,
input[type="password"] {
  padding: 5px 10px;
}

.errors {
  width: 35%;
  margin: 20px auto;
  color: red;
  font-style: italic;
  font-size: 1.1em;
}

.em {
  font-style: italic;
}

/* STICKY FOOTER IMPLEMENTATION */

body,
div#root,
div.App,
div#containing-div {
  min-height: 100vh;
}

div#containing-div {
  display: flex;
  flex-direction: column;
}

div#push-footer {
  flex: 1;
}

/* HEADER */

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 35px 0 45px;
}

.header a {
  text-decoration: none;
  color: rgb(18, 18, 18);
  font-weight: 600;
  font-size: 1.1em;
}

.logo-div {
  display: flex;
  align-items: center;
  margin-left: 5%;
  height: 45px;
}

#logo {
  margin: 0;
  font-size: 2em;
  color: rgb(18, 18, 18);
  text-align: left;
  line-height: 1;
}

.logo-div a:link {
  text-decoration: none;
}

.navbar {
  display: flex;
  justify-content: space-around;
  width: 35%;
  height: 20px;
}

.sign-in-and-out {
  margin-right: 5%;
  display: flex;
  justify-content: flex-end;
  height: 20px;
}


/* HOMEPAGE */

.shady-bg {
  padding: 150px 0;
  background-color: rgb(247, 246, 246);
}

.quick-about {
  width: 63%;
  margin: 0px auto;
  display: flex;
  flex-direction: column;
  align-content: center;
}

.quick-about h2 {
  margin: 0 0 40px;
  font-size: 3em;
  color: rgb(18, 18, 18);
}

.quick-about p {
  margin: 0;
  font-size: 1.75em;
  font-weight: 400;
  line-height: 2;
  color: rgb(18, 18, 18);
}

.date-card h4 {
  color: rgb(18, 18, 18);
}


/* DATE LIST */

.date-list {
  margin-top: 0;
  margin-left: 5%;
  margin-right: 5%;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.date-list .date-card {
  margin-left: 4.3%;
}

.date-list .date-card img {
  object-fit: cover;
  width: 350px;
  height: 350px;
}

.date-list .date-card:first-child,
.date-list .date-card:nth-child(3n+1) {
  margin-left: 0;
}

.date-card h4 {
  margin-top: 15px;
  margin-bottom: 80px;
  font-size: 1.25em;
}

.date-card a {
  text-decoration: none;
}

/* FOOTER */

.footer {
  display: flex;
  justify-content: space-between;
  padding: 30px 0;
}

.footer .social-icons {
  display: flex;
  justify-content: space-between;
  margin-right: 5%;
  align-items: center;
}

.footer .social-icons img {
  height: 35px;
  width: 35px;
  margin-right: 10px;
}

.footer .social-icons img:last-child {
  margin-right: 0;
}

/* GENERATE DATE FORM */

.generate-date-form h3 {
  margin-top: 0;
  margin-bottom: 30px;
  font-size: 2.5em;
}

.generate-date-form form {
  margin-top: 20px;
}

.form-labels {
  display: block;
  font-size: 1.25em;
  margin-bottom: 10px;
}

.generate-date-form form div.neighborhood-select {
  margin-bottom: 50px;
}

div.neighborhood-select select,
.curated-date-form form select {
  width: 225px;
  height: 40px;
  cursor: pointer;
  background-color: white;
  /* box-shadow: 0 2px 0 white; */
  border-radius: 2px;
  font-size: 1.15em;
  text-align-last: center;
}

.generate-date-form form div.category-selects {
  margin-bottom: 50px;
}

.generate-date-form form div.category-options {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin: 0 auto;
  width: 66%;
}

.generate-date-form form div.category-options label {
  margin-left: 3px;
}

.generate-date-form form div.category-options div {
  margin-left: 20px;
}

.generate-date-form form div.category-options div:first-child {
  margin-left: 0;
}

.generate-date-form form input[type="submit"],
.custom-date button.start-over-button,
.curated-date-form form input[type="submit"],
button#add-spot-button,
.date-show button {
  width: 225px;
  height: 40px;
  cursor: pointer;
  background-color: white;
  /* box-shadow: 0 2px 0 white; */
  border-radius: 2px;
  font-size: 1.15em;
  text-align-last: center;
  margin-bottom: 50px;
}

.generate-date-form form .category-selects .category-options div.errors {
  width: 50%;
  color: rgb(18, 18, 18);
  margin: 0 auto;
}

/* GENERATED CUSTOM DATE */

.custom-date {
  width: 90%;
  margin: 0 auto;
}

.custom-date h3 {
  margin-top: 0;
  font-size: 1.5em;
  font-family: 'Permanent Marker', cursive;
}

.custom-date .spot-card {
  display: flex;
  justify-content: space-between;
  margin-bottom: 150px;
  align-items: center;
}

.custom-date .spot-card:nth-child(even) {
  flex-direction: row-reverse;
}

.custom-date .spot-card .spot-text {
  width: 100%;
  text-align: center;
  margin-left: 5%;
}

.custom-date .spot-card:nth-child(even) .spot-text {
  margin-left: 0;
  margin-right: 5%;
}

.custom-date .spot-card:nth-last-child(2) {
  margin-bottom: 50px;
}

.custom-date h3 {
  margin-bottom: 0;
}

.custom-date h2 {
  margin-top: -10px;
  margin-bottom: 70px;
  font-family: 'Permanent Marker', cursive;
  font-size: 5em;
}

.spot-card .spot-text h4 {
  margin-top: 0;
}

.spot-card .spot-text h4 span.spot-title {
  font-size: 1.5em;
  font-style: italic;
  margin-right: 4px;
}

.spot-card .spot-text p {
  font-size: 1.05em;
  line-height: 1.75;
}

.custom-date button.start-over-button {
  margin-top: 30px;
  margin-bottom: 15px;
}

.custom-date img {
  max-width: 750px;
}

/* CURATE DATE FORM */

.curated-date-form h3 {
  margin-top: 0;
  margin-bottom: 30px;
  font-size: 2.5em;
}

.curated-date-form form {
  display: flex;
  flex-direction: column;
  width: 90%;
  margin: 0 auto 20px;
  align-items: center;
}

.curated-date-form form .curated-date-spots h4 {
  font-size: 1.20em;
  font-style: italic;
}

.curated-date-form form .curated-date-spots {
  display: flex;
  margin: 0 auto 30px;
  flex-wrap: wrap;
  justify-content: center;
}

.curated-date-form form .curated-date-spots .spot-form {
  margin: 35px 20px 0;
  border: 1px solid black;
  padding: 0 20px;
}

.curated-date-form form .curated-date-spots .spot-form .category-select {
  margin-bottom: 20px;
}

.curated-date-form form input[type="text"],
#sign-in-form input {
  width: 300px;
  height: 30px;
  font-size: 1.15em;
  margin: 0 auto 20px;
  background-color: rgba(232, 230, 230, 0.35);
  border: 0px solid rgba(18, 18, 18, 1);
}

.curated-date-form textarea {
  width: 400px;
  height: 150px;
  margin: 0 auto 20px;
  font-size: 1.15em;
  background-color: rgba(232, 230, 230, 0.35);
  border: 0px solid rgba(18, 18, 18, 1);
  resize: none;
}

.curated-date-form form input[type="submit"] {
  margin: 0 auto;
}

.curated-date-form .neighborhood-select select {
  margin-bottom: 20px;
}

.curated-date-form button#add-spot-button {
  margin: 0 auto 20px;
}

.curated-date-form input[type="file"] {
  margin-left: 10%;
}

.curated-date-form .spot-form input[type="file"] {
  display: block;
  margin-bottom: 15px;
  margin-left: 30%;
}

.delete-button {
  display: block;
  margin: 0 auto 10px;
  cursor: pointer;
  width: 24px;
  height: 24px;
}

/* BROWSE DATES */

.browse-dates .neighborhood-select select {
  margin-bottom: 50px;
}

.browse-dates .form-labels {
  margin-bottom: 15px;
}

.browse-dates .errors {
  margin-top: -25px;
  margin-bottom: 50px;
  color: rgb(18, 18, 18);
}

/* SIGN IN */

#sign-in-form .form-labels {
  display: inline;
  margin-right: 10px;
}

#sign-in-form div {
  margin-bottom: 20px;
}

#sign-in-form {
  text-align: right;
}

#sign-in-div {
  width: 35%;
  margin: 20px auto;
}

/* DATE SHOW VIEW */

.date-show {
  width: 80%;
  margin: 0 auto;
}

.date-show h2,
.date-show h4 {
  font-family: 'Permanent Marker', cursive;
}

.date-show h2 {
  font-size: 4em;
  margin-top: 30px;
}

.date-show h4 {
  font-size: 3em;
  margin-bottom: 20px;
}

.date-show img {
  width: 100%;
}

.date-show > p {
  width: 90%;
  margin: 30px auto 100px;
  font-size: 1.75em;
  line-height: 1.75;
}

.spot-card p {
  width: 85%;
  margin: 30px auto 20px;
  font-size: 1.5em;
  line-height: 2;
}

.date-show button {
  margin-top: 30px;
}

.date-show .option-buttons {
  display: flex;
  justify-content: space-between;
  width: 48%;
  margin: 0 auto;
}

